DS-612: Prevent icon flickering

--- a/packages/components/bolt-navbar/src/navbar-menu.scss
+++ b/packages/components/bolt-navbar/src/navbar-menu.scss
@@ -99,6 +99,7 @@
   transform: rotate(90deg);
   font-size: 1em;
   line-height: 0;
+  will-change: opacity;
   transition: opacity 0.2s;
 
   @media (prefers-reduced-motion) {
